# Generated by Django 4.2.6 on 2023-10-19 13:24

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    dependencies = [
        ('app', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='AsignacionEmpleados',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fechaIngreso', models.DateField()),
                ('fechaEgreso', models.DateField()),
                ('descripcion', models.CharField(max_length=255)),
            ],
        ),
        migrations.CreateModel(
            name='Consulta',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('numeroOrden', models.IntegerField()),
                ('fechaEntrada', models.DateField()),
                ('sIntomas', models.CharField(max_length=255)),
                ('diagnosticos', models.CharField(max_length=255)),
                ('medicamento', models.CharField(max_length=255)),
                ('fechaSalida', models.DateField()),
            ],
        ),
        migrations.CreateModel(
            name='Empleado',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('numeroDocumento', models.IntegerField()),
                ('nombres', models.CharField(max_length=255)),
                ('apellido', models.CharField(max_length=255)),
                ('fechaNacimiento', models.DateField()),
                ('fechaIngreso', models.DateField()),
            ],
        ),
        migrations.CreateModel(
            name='EstadoEmpleado',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('estudiante', models.CharField(max_length=255)),
                ('recibido', models.CharField(max_length=255)),
                ('trabaja', models.CharField(max_length=255)),
                ('noTrabaja', models.CharField(max_length=255)),
            ],
        ),
        migrations.CreateModel(
            name='HistorialMascotas',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('estadoPerro', models.CharField(max_length=255)),
                ('rolPersona', models.CharField(max_length=255)),
            ],
        ),
        migrations.CreateModel(
            name='Medicamento',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=255)),
                ('laboratorio', models.CharField(max_length=255)),
                ('fechaUltimaCompra', models.DateField()),
                ('cantidadExistente', models.IntegerField()),
                ('cantidadMinima', models.IntegerField()),
            ],
        ),
        migrations.CreateModel(
            name='Perro',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('numeroHistoriaClinica', models.IntegerField()),
                ('nombre', models.CharField(max_length=255)),
                ('fechaNacimiento', models.DateField()),
                ('pesoActual', models.FloatField()),
                ('alturaActual', models.FloatField()),
                ('consulta', models.TextField()),
                ('vacuna', models.CharField(max_length=100, verbose_name='vacuna;')),
                ('historialMascotas', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='app.historialmascotas')),
            ],
        ),
        migrations.CreateModel(
            name='Persona',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombrePersona', models.CharField(max_length=255)),
                ('numDocPersona', models.IntegerField()),
                ('descripcion', models.CharField(max_length=180, verbose_name='Descripcion:')),
            ],
        ),
        migrations.CreateModel(
            name='Raza',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('denominacion', models.CharField(max_length=255)),
                ('pesoMinimoMachos', models.FloatField()),
                ('pesoMaximoMachos', models.FloatField()),
                ('pesoMinimoHembras', models.FloatField()),
                ('pesoMaximoHembras', models.FloatField()),
                ('alturaMediaMachos', models.FloatField()),
                ('alturaMediaHembras', models.FloatField()),
                ('cuidadosEspeciales', models.CharField(max_length=180, verbose_name='cuidadosEspeciales')),
            ],
        ),
        migrations.CreateModel(
            name='RolEmpleado',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('supervisor', models.CharField(max_length=255)),
                ('supervisorSuplente', models.CharField(max_length=255)),
            ],
        ),
        migrations.CreateModel(
            name='Sucursal',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('direccion', models.CharField(max_length=255)),
            ],
        ),
        migrations.CreateModel(
            name='Vacuna',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombreVacuna', models.CharField(max_length=255)),
                ('empleado', models.CharField(max_length=255)),
                ('laboratorio', models.CharField(max_length=255)),
                ('dosis', models.CharField(max_length=255)),
            ],
        ),
        migrations.CreateModel(
            name='Vacunacion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fechaProgramada', models.DateField()),
                ('fechaReal', models.DateField()),
                ('descripcion', models.CharField(max_length=255)),
            ],
        ),
        migrations.DeleteModel(
            name='Veterinaria',
        ),
        migrations.AddField(
            model_name='perro',
            name='raza',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='app.raza'),
        ),
        migrations.AddField(
            model_name='empleado',
            name='sucursal',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='app.sucursal'),
        ),
        migrations.AddField(
            model_name='consulta',
            name='perro',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='consultas', to='app.perro'),
        ),
        migrations.AddField(
            model_name='consulta',
            name='persona',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='app.persona'),
        ),
    ]
