erDiagram
    Sucursal {
        Int id_sucursal PK
        Varchar direccion
        Empleado empleado FK
        Consulta consulta FK
    }

    Empleado {
        Int numeroDocumento PK
        String nombres
        String apellido
        Date fechaNacimiento
        Date fechaIngreso
        Int id_sucursal FK
        Int id_estadoEmpleado FK
    }

    AsignacionEmpleados {
        Int id_asignacion PK
        Date fechaIngreso
        Date fechaEgreso
        String descripcion
    }

    Perro {
        Int numeroHistoriaClinica PK
        String nombre
        Date fechaNacimiento
        Raza raza
        Float pesoActual
        Float alturaActual
        Personas historialMascotas FK
    }

    HistorialMascotas {
        Int id_historial PK
        String estadoPerro
        String rolPersona
    }

    Persona {
        Int numDocPersona PK
        String nombrePersona
        String descripcion
    }
    
    Raza {
        Int id_raza PK
        String denominacion
        Float pesoMinimoMachos
        Float pesoMaximoMachos
        Float pesoMinimoHembras
        Float pesoMaximoHembras
        Float alturaMediaMachos
        Float alturaMediaHembras
        Float cuidadosEspeciales
    }
    Sintoma {
        Int id_sintoma PK
        String nombre
        String descripcion
    }

    Consulta {
        Int numeroOrden PK
        Date fechaEntrada
        Int id_sintoma FK
        String diagnostico
        String medicamento FK
        Date fechaSalida
        String listaEmpleados
    }

    RegistroConsulta {
        Int id_registro PK
        String urls
        String devolucionConsulta
        String receta
    }
    RolEmpleadoConsulta {
        Int id_rolEmpleado PK
        String rolConsulta
        String descripcion
    }
    Vacunacion {
        Int id_vacunacion PK
        Int codigoVacuna FK
        Int numeroDocumento FK
        Int numeroHistoriaClinica FK
        Date fechaProgramada
        Date fechaReal
        String descripcion
    }
    EstadoEmpleado {
        Int id_estadoEmpleado PK
        String estado
        String descripcion
    }
    Rol {
        Int id_rolEmpleado PK
        String nombre
        String descripcion
    }
    Vacuna {
        Int codigoVacuna PK
        String nombreVacuna
        String laboratorio
        String dosis
    }
    Medicamento {
        Int codigoMedicamento PK
        String nombreMedicamento
        String laboratorio
        Date fechaUltimaCompra
        Int cantidadExistente
        Int cantidadMinima
    }

    Sucursal ||..|{ Empleado : tiene
    Sucursal ||..|{ Consulta : tiene
    EstadoEmpleado ||..|{ Empleado : tiene
    RolEmpleado ||..|{ Empleado : tiene



